--- a/index.html
+++ b/index.html
@@ -17,7 +17,26 @@
             <a href="index.html">
                 <img src="images/logo.png" alt="logo">
             </a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="marketplace.html">Marketplace</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="faq.html">FAQs</a></li>
+            </ul>
         </div>
     </nav>
+    <main>
+        <!--Hero-->
+        <section>
+            <h1>WE ARE PASSIONATE ABOUT MEO TA</h1>
+            <p>Our mission is to preserve and celebrate Vietnamese cat heritages</p>
+        </section>
+
+        <section>
+            <h2>The crisis we are facing</h2>
+            <p>Every year, thousands of cats in Vietnam become victim to trafficking and illegal meat trade.</p>
+        </section>
+    </main>
 </body>
 </html>
