--- a/index.html
+++ b/index.html
@@ -36,6 +36,20 @@
         <section>
             <h2>The crisis we are facing</h2>
             <p>Every year, thousands of cats in Vietnam become victim to trafficking and illegal meat trade.</p>
+            <div>
+                <div>
+                    <h3>0</h3>
+                    <p>Description</p>
+                </div>
+                <div>
+                    <h3>0</h3>
+                    <p>Description</p>
+                </div>
+                <div>
+                    <h3>0</h3>
+                    <p>Description</p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
