--- a/index.html
+++ b/index.html
@@ -51,6 +51,37 @@
                 </div>
             </div>
         </section>
+
+        <!--About-->
+        <section>
+            <h2>About us</h2>
+            <p>Description of the organization</p>
+
+            <div>
+                <h3>Our Core Values</h3>
+                <div>
+                    <div>
+                        <h4>Trust</h4>
+                        <p>Description</p>
+                    </div>
+
+                    <div>
+                        <h4>Community</h4>
+                        <p>Description</p>
+                    </div>
+
+                    <h4>Compassion</h4>
+                    <p>Description</p>
+                </div>
+
+                <div>
+                    <h4>Education</h4>
+                    <p>Description</p>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
 </body>
 </html>
