finish home page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,39 @@
             </div>
         </section>
 
-        
+        <section>
+            <h2>Meet the Vietnamese Cats</h2>
+
+            <div>
+                <article>
+                    <img src="images/calico_cat.jpg" alt="calico">
+                    <h3>Calico Cat</h3>
+                    <p>Meo Tam The</p>
+                    <p>Description of Calico cat</p>
+                </article>
+
+                <article>
+                    <img src="images/orange_cat.jpg" alt="orange">
+                    <h3>Orange Cat</h3>
+                    <p>Meo Cam</p>
+                    <p>Description of Orange cat</p>
+                </article>
+
+                <article>
+                    <img src="images/black_cat.jpg" alt="black">
+                    <h3>Black Cat</h3>
+                    <p>Meo Mun</p>
+                    <p>Description of Black cat</p>
+                </article>
+
+                <article>
+                    <img src="images/tabby_cat.jpg" alt="tabby">
+                    <h3>Tabby Cat</h3>
+                    <p>Meo Muop</p>
+                    <p>Description of Tabby cat</p>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 </html>
