--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
     </nav>
     <main>
         <!--Hero-->
-        <section>
-            <h1>WE ARE PASSIONATE ABOUT MEO TA</h1>
-            <p>Our mission is to preserve and celebrate Vietnamese cat heritages</p>
+        <section style="text-align: center; padding: 50px 20px; background-color:maroon; border-radius: 10px;">
+            <h1 style="color: antiquewhite">WE ARE PASSIONATE ABOUT MEO TA</h1>
+            <p style="font-size: 1rem; color: antiquewhite;">Our mission is to preserve and celebrate Vietnamese cat heritages</p>
         </section>
 
-        <section>
-            <h2>The crisis we are facing</h2>
-            <p>Every year, thousands of cats in Vietnam become victim to trafficking and illegal meat trade.</p>
-            <div>
-                <div>
-                    <h3>0</h3>
+        <section style="background-color: black; color: azure; padding: 40px; border-radius: 10px;">
+            <h2 style="text-align: center; color: red;">The crisis we are facing</h2>
+            <p style="text-align: center;">Every year, thousands of cats in Vietnam become victim to trafficking and illegal meat trade.</p>
+            <div style="display: flex; gap: 20px; justify-content: space-around; margin-top: 30px;">
+                <div style="text-align: center;">
+                    <h3 style="font-size: 3rem; color: red;">0</h3>
                     <p>Description</p>
                 </div>
-                <div>
-                    <h3>0</h3>
+                <div style="text-align: center;">
+                    <h3 style="font-size: 3rem; color: red;">0</h3>
                     <p>Description</p>
                 </div>
-                <div>
-                    <h3>0</h3>
+                <div style="text-align: center;">
+                    <h3 style="font-size: 3rem; color: red;">0</h3>
                     <p>Description</p>
                 </div>
             </div>
