finished styling homepage

--- a/index.html
+++ b/index.html
@@ -102,63 +102,73 @@
 
         <!--About-->
         <section>
-            <h2>About us</h2>
-            <p>Description of the organization</p>
-
+            <h2>About Us</h2>
+            <p>Welcome to Mèo Ta, a platform dedicated to preserving the heritage of Vietnamese cats.</p>
+            
             <div>
                 <h3>Our Core Values</h3>
-                <div>
-                    <div>
+                <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; margin-top: 20px;">
+                    <div style="background: whitesmoke; padding: 20px; border-radius: 10px; text-align: center;">
                         <h4>Trust</h4>
-                        <p>Description</p>
+                        <p>Verified sellers and safe adoption processes</p>
                     </div>
-
-                    <div>
+                    <div style="background: whitesmoke; padding: 20px; border-radius: 10px; text-align: center;">
                         <h4>Community</h4>
-                        <p>Description</p>
+                        <p>Building connections among cat lovers</p>
                     </div>
-
-                    <h4>Compassion</h4>
-                    <p>Description</p>
-                </div>
-
-                <div>
-                    <h4>Education</h4>
-                    <p>Description</p>
+                    <div style="background: whitesmoke; padding: 20px; border-radius: 10px; text-align: center;">
+                        <h4>Compassion</h4>
+                        <p>Prioritizing animal welfare always</p>
+                    </div>
+                    <div style="background: whitesmokegi; padding: 20px; border-radius: 10px; text-align: center;">
+                        <h4>Education</h4>
+                        <p>Sharing knowledge about cat care</p>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section>
-            <h2>Meet the Vietnamese Cats</h2>
+            <h2 style="text-align: center;">Meet the Vietnamese Cats</h2>
 
-            <div>
-                <article>
-                    <img src="images/calico_cat.jpg" alt="calico">
-                    <h3>Calico Cat</h3>
-                    <p>Meo Tam The</p>
-                    <p>Description of Calico cat</p>
+            <!-- Calico Cat -->
+                <article style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+                    <img src="images/calico_cat.jpg" alt="Calico Cat" style="width: 100%; height: 200px; object-fit: cover;">
+                    <div style="padding: 15px;">
+                        <h3>Calico Cat</h3>
+                        <p style="font-style: italic;">Mèo Tam Thể</p>
+                        <p>The tri-colored beauty with orange, black, and white.</p>
+                    </div>
                 </article>
 
-                <article>
-                    <img src="images/orange_cat.jpg" alt="orange">
-                    <h3>Orange Cat</h3>
-                    <p>Meo Cam</p>
-                    <p>Description of Orange cat</p>
+                <!-- Orange Cat -->
+                <article style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+                    <img src="images/orange_cat.jpg" alt="Orange Cat" style="width: 100%; height: 200px; object-fit: cover;">
+                    <div style="padding: 15px;">
+                        <h3>Orange Cat</h3>
+                        <p style="font-style: italic;">Mèo Cam</p>
+                        <p>The famous friendly ginger cat with a warm orange coat.</p>
+                    </div>
                 </article>
 
-                <article>
-                    <img src="images/black_cat.jpg" alt="black">
-                    <h3>Black Cat</h3>
-                    <p>Meo Mun</p>
-                    <p>Description of Black cat</p>
+                <!-- Black Cat -->
+                <article style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+                    <img src="images/black_cat.jpg" alt="Black Cat" style="width: 100%; height: 200px; object-fit: cover;">
+                    <div style="padding: 15px;">
+                        <h3>Black Cat</h3>
+                        <p style="font-style: italic;">Mèo Mun</p>
+                        <p>The black cat with mysterious charm.</p>
+                    </div>
                 </article>
 
-                <article>
-                    <img src="images/tabby_cat.jpg" alt="tabby">
-                    <h3>Tabby Cat</h3>
-                    <p>Meo Muop</p>
-                    <p>Description of Tabby cat</p>
+                <!-- Tabby Cat -->
+                <article style="background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+                    <img src="images/tabby_cat.jpg" alt="Tabby Cat" style="width: 100%; height: 200px; object-fit: cover;">
+                    <div style="padding: 15px;">
+                        <h3>Tabby Cat</h3>
+                        <p style="font-style: italic;">Mèo Mướp</p>
+                        <p>The striped cat with distinctive M marking on forehead.</p>
+                    </div>
                 </article>
             </div>
         </section>
