--- a/index.html
+++ b/index.html
@@ -4,55 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mèow Việt</title>
-
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            background-color: aliceblue;
-            padding: 20px;
-        }
-
-        nav img {
-            height: 50px;
-        }
-
-        nav ul {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: black;
-        }
-
-        main {
-            padding: 20px;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-
-        section {
-            margin-bottom: 40px;
-        }
-
-        h1 {
-            font-size: 4rem;
-            text-align: center;
-        }
-
-        h2 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/styles.css">
+    
     <!-- Add Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.min.css">
@@ -120,7 +73,7 @@
                         <h4>Compassion</h4>
                         <p>Prioritizing animal welfare always</p>
                     </div>
-                    <div style="background: whitesmokegi; padding: 20px; border-radius: 10px; text-align: center;">
+                    <div style="background: whitesmoke; padding: 20px; border-radius: 10px; text-align: center;">
                         <h4>Education</h4>
                         <p>Sharing knowledge about cat care</p>
                     </div>
