--- a/discover.html
+++ b/discover.html
@@ -57,7 +57,29 @@
                 </div>
             </div>
         </div>
-        
+
+        <div>
+            <h2>Cat Safety Awareness</h2>
+            <p>Ensuring the wellbeing of ...</p>
+        </div>
+
+        <div>
+            <div>
+                <span>🏠</span>
+                <h4>Indoor Safety</h4>
+                <p>Description</p>
+            </div>
+            <div>
+                <span>🚗</span>
+                <h4>Traffic awareness</h4>
+                <p>Description</p>
+            </div>
+            <div>
+                <span>💉</span>
+                <h4>Vaccination</h4>
+                <p>Description</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
