--- a/discover.html
+++ b/discover.html
@@ -4,30 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <nav>
-        <div>
-            <a href="index.html">
-                <img src="images/logo.png" alt="logo">
-            </a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="discover.html">Discover</a></li>
-                <li><a href="marketplace.html">Marketplace</a></li>
-                <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="faq.html">FAQs</a></li>
-            </ul>
-        </div>
+    <nav style="background-color: white; padding: 15px; border-radius: 8px; margin-bottom: 20px;">
+        <img src="logo.png" alt="logo" style="height: 40px;">
+        <ul style="list-style: none; display: inline; margin: 0; padding: 0;">
+            <li style="display: inline; margin: 0 15px;"><a href="index.html" style="text-decoration: none; color: black;">Home</a></li>
+            <li style="display: inline; margin: 0 15px;"><a href="discover.html" style="text-decoration: none; color: black;">Discover</a></li>
+            <li style="display: inline; margin: 0 15px;"><a href="marketplace.html" style="text-decoration: none; color: black;">Marketplace</a></li>
+            <li style="display: inline; margin: 0 15px;"><a href="quiz.html" style="text-decoration: none; color: black;">Quiz</a></li>
+            <li style="display: inline; margin: 0 15px;"><a href="faq.html" style="text-decoration: none; color: black;">FAQs</a></li>
+        </ul>
     </nav>
 
     <div>
         <div>
-            <h1>Cats in Vietnamese Culture</h1>
+            <h1 style="font-size: 2.4rem;">Cats in Vietnamese Culture</h1>
         </div>
 
         <div>
-            <div>
+            <div style="display: flex; gap: 20px; justify-content: space-around; margin-top: 30px;">
                 <div>
                     <h3>Zodiac</h3>
                 </div>
@@ -41,8 +38,8 @@
         </div>
 
         <div>
-            <h2>Why meo ta?</h2>
-            <div>
+            <h2 style="text-align: center;">Why meo ta?</h2>
+            <div style="display: flex; gap: 20px; justify-content: space-around; margin-top: 30px;">
                 <div class="info-card">
                     <h4>Agriculture partner</h4>
                     <p>Description</p>
@@ -59,11 +56,11 @@
         </div>
 
         <div>
-            <h2>Cat Safety Awareness</h2>
-            <p>Ensuring the wellbeing of ...</p>
+            <h2 style="text-align: center; font-size: 2rem;">Cat Safety Awareness</h2>
+            <p style="text-align: center;">Ensuring the wellbeing of ...</p>
         </div>
 
-        <div>
+        <div style="display: flex; gap: 20px; justify-content: space-around; margin-top: 30px;">
             <div>
                 <span>🏠</span>
                 <h4>Indoor Safety</h4>
