--- a/discover.html
+++ b/discover.html
@@ -340,7 +340,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="logo.png" alt="Mèo Ta Logo">
+                <img src="images/logo.png" alt="Mèo Ta Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
