almost last commit

--- a/marketplace.html
+++ b/marketplace.html
@@ -186,7 +186,7 @@
         .apply-filter-btn {
             width: 100%;
             padding: 0.75rem;
-            background: var(--vibrant-orange);
+            background: var(--dark-maroon);
             color: white;
             border: none;
             border-radius: 10px;
@@ -196,7 +196,7 @@
         }
         
         .apply-filter-btn:hover {
-            background: #ff9800;
+            background: maroon;
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(255, 167, 38, 0.3);
         }
@@ -349,7 +349,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="logo.png" alt="Mèo Ta Logo">
+                <img src="images/logo.png" alt="Mèo Ta Logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
