--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
 
         /* Hero */
         .hero-section {
-            background: url('images/cat_bg4.png');
             background-size: cover;
             padding: 6rem 2rem;
             text-align: center;
@@ -94,19 +93,19 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div style="text-align: center; color: white; padding: 2rem; background: gray; border-radius: 15px;">
-                        <div style="font-size: 4rem; font-weight: bold; color: red;" id="catsTrafficked">0</div>
+                        <div style="font-size: 4rem; font-weight: bold; color: red;" id="catsTrafficked">2,756</div>
                         <div style="font-size: 1.2rem; color: ivory">Cats Trafficked Annually</div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div style="text-align: center; color: white; padding: 2rem; background: gray; border-radius: 15px;">
-                        <div style="font-size: 4rem; font-weight: bold; color: red;" id="meatSold">0</div>
+                        <div style="font-size: 4rem; font-weight: bold; color: red;" id="meatSold">10,000</div>
                         <div style="font-size: 1.2rem; color: ivory;">Kgs of cat meat sold</div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div style="text-align: center; color: white; padding: 2rem; background: gray; border-radius: 15px;">
-                        <div style="font-size: 4rem; font-weight: bold; color: red;" id="sellingPoint">0</div>
+                        <div style="font-size: 4rem; font-weight: bold; color: red;" id="sellingPoint">312</div>
                         <div style="font-size: 1.2rem; color: ivory;">Illegal Selling Points</div>
                     </div>
                 </div>
@@ -175,7 +174,7 @@
 
                 <div class="col-md-3">
                     <div style="background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 20px rgba(0,0,0,0.1); height: 100%;">
-                        <img src="images/orange_cat.jpg" alt="Orange Cat" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="images/orange_cat1.jpg" alt="Orange Cat" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="padding: 1.5rem;">
                             <h3 style="color: #3C0008; font-weight: bold; font-size: 1.5rem; margin-bottom: 0.5rem;">Orange Cat</h3>
                             <div style="color: black; font-style: italic; margin-bottom: 1rem; font-size: 1.1rem;">Mèo Cam</div>
@@ -190,7 +189,7 @@
 
                 <div class="col-md-3">
                     <div style="background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 20px rgba(0,0,0,0.1); height: 100%;">
-                        <img src="images/black_cat.jpg" alt="Black Cat" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="images/black_cat1.avif" alt="Black Cat" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="padding: 1.5rem;">
                             <h3 style="color: #3C0008; font-weight: bold; font-size: 1.5rem; margin-bottom: 0.5rem;">Black Cat</h3>
                             <div style="color: black; font-style: italic; margin-bottom: 1rem; font-size: 1.1rem;">Mèo Mun</div>
@@ -205,7 +204,7 @@
 
                 <div class="col-md-3">
                     <div style="background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 20px rgba(0,0,0,0.1); height: 100%;">
-                        <img src="images/tabby_cat.jpg" alt="Tabby Cat" style="width: 100%; height: 250px; object-fit: cover;">
+                        <img src="images/tabby_cat1.jpg" alt="Tabby Cat" style="width: 100%; height: 250px; object-fit: cover;">
                         <div style="padding: 1.5rem;">
                             <h3 style="color: #3C0008; font-weight: bold; font-size: 1.5rem; margin-bottom: 0.5rem;">Tabby Cat</h3>
                             <div style="color: black; font-style: italic; margin-bottom: 1rem; font-size: 1.1rem;">Mèo Mướp</div>
